--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^1.2.0",
+    "classnames": "^2.2.6",
     "postcss-cli": "^6.1.3",
     "postcss-import": "^12.0.1",
     "rollup-plugin-postcss": "^2.0.3",
