--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "svelte-app",
+  "name": "tic_tac_toe",
   "version": "1.0.0",
+  "license": "MIT",
   "devDependencies": {
     "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
